changed: updated Russian translation

--- a/locales/src/ru/translation.json
+++ b/locales/src/ru/translation.json
@@ -115,6 +115,9 @@
             "heading": "ОК",
             "msg": "Форма без ошибок!"
         },
+        "valuehasspaces": {
+            "multiple": "Выбор нескольких вопросов имеет недопустимое значение \"__value__\", которое содержит пробел."
+        },
         "xpatherror": {
             "heading": "Ошибка в формуле",
             "msg": "Произошла ошибка вычисления формулы. Пожалуйста, свяжитесь с __emailLink__ по этой ошибке:"
@@ -169,6 +172,10 @@
             "psize": "Размер бумаги",
             "reminder": "Не забудьте установить эти же самые параметры печати в настройках печати браузера!"
         },
+        "repeatremove": {
+            "heading": "Удалить эту группу ответов?",
+            "msg": "Это действие необратимо. Вы уверены, что хотите продолжить?"
+        },
         "save": {
             "existingerror": "Это имя записи или ID уже существует.",
             "hint": "Это имя позволяет вам легко найти черновик, чтобы продолжить позже.",
@@ -177,10 +184,6 @@
             "posButton": "Сохранить и закрыть",
             "renamemsg": "Вы действительно хотите переименовать __currentName__ в __newName__?",
             "unkownerror": "При попытке сохранить данные произошла неизвестная ошибка."
-        },
-        "repeatremove": {
-            "heading": "Удалить эту группу ответов?",
-            "msg": "Это действие необратимо. Вы уверены, что хотите продолжить?"
         }
     },
     "constraint": {
@@ -266,6 +269,11 @@
         "searchPlaceholder": "поиск места или адреса"
     },
     "here": "сдесь",
+    "hint": {
+        "guidance": {
+            "details": "больше информации"
+        }
+    },
     "home": {
         "msg": "__appTitle__ работает! Пожалуйста, обращайтесь к формам Enketo из вашей установки __serverName__."
     },
@@ -300,6 +308,10 @@
         "th": "Тайский",
         "vi": "Вьетнамский",
         "zh": "Китайский"
+    },
+    "literacywidget": {
+        "finish": "Завершено",
+        "start": "Начать"
     },
     "page": {
         "modernbrowsers": {
