added: albanian translation

--- a/locales/src/en/translation.json
+++ b/locales/src/en/translation.json
@@ -302,6 +302,7 @@
         "ro": "Romanian",
         "ru": "Russian",
         "sk": "Slovak",
+        "sq": "Albanian",
         "supported": "Languages supported: ",
         "sv": "Swedish",
         "sw": "Swahili",
