changed: updated Russian translation

--- a/locales/src/ru/translation.json
+++ b/locales/src/ru/translation.json
@@ -123,6 +123,7 @@
             "msg": "Произошла ошибка вычисления формулы. Пожалуйста, свяжитесь с __emailLink__ по этой ошибке:"
         }
     },
+    "changelog": "Журнал изменений",
     "confirm": {
         "autosaveload": {
             "heading": "Найдены не сохраненные изменения",
@@ -302,6 +303,7 @@
         "ro": "Румынский",
         "ru": "Русский",
         "sk": "Словацкий ",
+        "sq": "Албанский",
         "supported": "Поддерживаемые языки:",
         "sv": "Шведский",
         "sw": "Суахили",
@@ -377,6 +379,9 @@
         "http4xx": "Неизвестная проблема отправки данных на сервер.",
         "http500": "Сервер для вашей формы или сервер Enketo не работает. Повторите попытку позже или свяжитесь с __supportEmail__.",
         "http504": "Не удалось установить соединение с сервером."
+    },
+    "themes": {
+        "supported": "Поддерживаемые темы"
     },
     "version": "версия:",
     "widget": {
