--- a/locales/src/es/translation.json
+++ b/locales/src/es/translation.json
@@ -59,16 +59,16 @@
             "msg": "Acaba de cerrar la sesión."
         },
         "offlinesupported": {
-            "heading": "El formulario funciona offline!",
+            "heading": "El formulario funciona sin conexión!",
             "msg": [
                 "Este formulario puede ser cargado y usado sin conexión a Internet en este dispositivo. Añádalo a sus favoritos para poder acceder facilmente al mismo sin una conexión.",
-                "Los registros se guardarán y encolarán automáticamente en el navegador hasta que tenga conexión a Internet. Cuando la aplicación esté online los registros se enviarán automáticamente - uno a uno.",
+                "Los registros se guardarán y encolarán automáticamente en el navegador hasta que tenga conexión a Internet. Cuando la aplicación esté conectada, los registros se enviarán automáticamente - uno a uno.",
                 "Solo unicamente cuando un registro ha sido enviado con éxito, será eliminado de la cola. Puede cerrar con seguridad su navegador y el dispositivo con elementos en la cola. Seguirán en la cola la próxima vez que cargue el formulario."
             ]
         },
         "offlineunsupported": {
-            "heading": "Esta aplicación no se puede ejecutar offline",
-            "msg": "Este navegador no permite ejecutar la aplicación offline. Puede usar la encuesta sin esta característica o ver las opciones para resolver esto.",
+            "heading": "Esta aplicación no se puede ejecutar sin conexión",
+            "msg": "Este navegador no permite ejecutar la aplicación sin conexión. Puede usar la encuesta sin esta característica o ver las opciones para resolver esto.",
             "negButton": "Utilícelo",
             "posButton": "Mostrar opciones"
         },
@@ -94,7 +94,7 @@
             "authrequiredmsg": "Es necesaria la autenticación. Por favor autentifíquese __aquí__ en una pestaña diferente del navegador y pruebe de nuevo.",
             "fnfmsg": [
                 "No hemos podido recuperar los siguientes archivos de tipo multimedia __failedFiles__ . El envío siguió su curso sin estos archivos y fue un éxito.",
-                "Por favor contact __supportEmail__ to reportar un fallo (bug) y si es posible explicar como se produjo dicho fallo para que sea reproducible y nos permita arreglarlo."
+                "Por favor contáctese con __supportEmail__ para reportar un fallo (bug) y si es posible explicar como se produjo dicho fallo para que sea reproducido y nos permita corregirlo."
             ],
             "heading": "Envío incorrecto."
         },
@@ -193,7 +193,7 @@
     },
     "contact": {
         "admin": "Contáctese con el administrador de la encuesta por favor.",
-        "support": "Contáctese con __supportEmail__ por favor."
+        "support": "Contáctese por favor con __supportEmail__."
     },
     "drawwidget": {
         "annotation": "archivo y dibujo",
@@ -227,7 +227,7 @@
         "file": "archivo",
         "notFound": "No se pudo encontrar el archivo __existing__ (no lo modifique si ya lo envió y desea preservarlo).",
         "placeholder": "Haga clic aquí para subir el archivo. (<__maxSize__)",
-        "resetWarning": "Esto eliminará el __item__. ¿Seguro que quieres hacer esto?",
+        "resetWarning": "Esto eliminará el __item__. ¿Seguro que desea hacer esto?",
         "toolargeerror": "Archivo demasiado grande (> __maxSize__)",
         "waitingForPermissions": "Esperando permisos de usuario."
     },
@@ -284,7 +284,7 @@
     "langs": {
         "ar": "Árabe",
         "cs": "Checo",
-        "de": "Aleman",
+        "de": "Alemán",
         "el": "Griego",
         "en": "Inglés",
         "es": "Español",
@@ -348,7 +348,7 @@
     },
     "record-list": {
         "export": "Exportar",
-        "msg1": "Los registros se almacenan en su navegador hasta que estos han sido enviados al servidor (incluso aunque apague el ordenador o pierda la conexión).",
+        "msg1": "Los registros se almacenan en su navegador hasta que éstos han sido enviados al servidor (incluso aunque apague el ordenador o pierda la conexión).",
         "msg2": "Los registros que están en la cola, excepto aquellos marcados como draft __icon__, se envían al servidor automáticamente en segundo plano, cada 5 minutos cuando la página Web está abierta y hay conexión a Internet.",
         "msg2-nodraft": "Los registros que están en la cola, excepto aquellos marcados como draft __icon__, se envían al servidor automáticamente en segundo plano, cada 5 minutos cuando la página Web está abierta y hay conexión a Internet.",
         "msg3": "Para forzar un envío entre intentos automáticos haga clic en Enviar datos.",
